# origin.numeric

./: CMakeLists.txt  README.md
origin/: CMakeLists.txt  concepts.hpp  digit.hpp  natural.cpp  natural.hpp
origin/digit.test/: test-digit.cpp
origin/numeric/: CMakeLists.txt  ap_natural.cpp  ap_natural.hpp  concepts.cpp  digit.cpp  digit.hpp  fp_natural.cpp  fp_natural.hpp  natural.cpp  natural.hpp  number.cpp  number.hpp
origin/numeric/ap_natural.test/: general.cpp
origin/numeric/digit.test/: CMakeLists.txt  general.cpp
origin/numeric/fp_natural.test/: CMakeLists.txt  addition.cpp  default.cpp  general.cpp  relation.cpp  subtraction.cpp  value.cpp
origin/numeric/natural.test/: general.cpp
